syntax = "proto3";

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package nutrition.models;
option go_package = "github.com/kirvader/BodyController/services/nutrition/proto";

message Macros {
	float calories = 1 [(google.api.field_behavior) = REQUIRED];
	float proteins = 2 [(google.api.field_behavior) = REQUIRED];
	float carbs = 3 [(google.api.field_behavior) = REQUIRED];
	float fats = 4 [(google.api.field_behavior) = REQUIRED];
};

message Ingredient {
    string id = 1 [(google.api.field_behavior) = REQUIRED];
    string name = 2 [(google.api.field_behavior) = REQUIRED];
    google.protobuf.StringValue image_path = 3 [(google.api.field_behavior) = OPTIONAL];
    Macros macros_normalized_to100g = 4 [(google.api.field_behavior) = REQUIRED];
};

message WeightedIngredient {
    string ingredient_id = 1 [(google.api.field_behavior) = REQUIRED];
    float mass = 2 [(google.api.field_behavior) = REQUIRED];
};

message Recipe {
    string id = 1 [(google.api.field_behavior) = REQUIRED];
    string name = 2 [(google.api.field_behavior) = REQUIRED];
    string taste_description = 3 [(google.api.field_behavior) = REQUIRED];
    string cooking_steps_description = 4 [(google.api.field_behavior) = REQUIRED];
    repeated WeightedIngredient original_ingredients_proportion = 5 [(google.api.field_behavior) = REQUIRED];
    google.protobuf.StringValue image_path = 6 [(google.api.field_behavior) = OPTIONAL];
};

enum MealStatus {
    Planned = 0;
    Cooked = 1;
    Consumed = 2;
}

message Meal {
    string id = 1 [(google.api.field_behavior) = REQUIRED];
    string author = 2 [(google.api.field_behavior) = REQUIRED];
    google.protobuf.StringValue base_recipe_id = 3 [(google.api.field_behavior) = OPTIONAL];
    repeated WeightedIngredient weighted_ingredients = 4 [(google.api.field_behavior) = REQUIRED];
    google.protobuf.Timestamp consumption_timestamp = 5 [(google.api.field_behavior) = REQUIRED];
    google.protobuf.StringValue image_path = 6 [(google.api.field_behavior) = OPTIONAL];

};